[package]
authors.workspace = true
description = "Handles storage provider registration and proofs"
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "pallet-storage-provider"
repository.workspace = true
version = "0.0.0"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bls12_381 = { workspace = true }
cid = { workspace = true, features = ["alloc"] }
codec = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pairing = { workspace = true }
primitives-proofs = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
multihash-codetable = { workspace = true, features = ["blake2b"] }
pallet-balances = { workspace = true }
pallet-market = { workspace = true }
rstest = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "pallet-balances/std",
  "pallet-market/std",
  "primitives-proofs/std",
  "scale-info/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime", "sp-runtime/try-runtime"]
