[package]
authors.workspace = true
description = "Handles storage provider registration and proofs"
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "pallet-storage-provider"
repository.workspace = true
version = "0.0.0"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cid = { workspace = true, default-features = false, features = ["alloc"] }
codec = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
polka-storage-proofs = { workspace = true, default-features = false }
primitives-proofs = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-arithmetic = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[dev-dependencies]
env_logger = { workspace = true }
multihash-codetable = { workspace = true, features = ["blake2b"] }
pallet-balances = { workspace = true, default-features = false }
pallet-market = { workspace = true, default-features = false }
rstest = { workspace = true }
sp-io = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  # "pallet-balances/std",
  # "pallet-market/std",
  "primitives-proofs/std",
  "scale-info/std",
  "sp-arithmetic/std",
  "sp-core/std",
  # "sp-io/std",
  "sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime", "sp-runtime/try-runtime"]
