[package]
authors.workspace = true
description = "Handles storage provider registration and proofs"
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "pallet-storage-provider"
repository.workspace = true
version = "0.0.0"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cid = { workspace = true, features = ["alloc"] }
codec = { workspace = true, default-features = false, features = ["derive"] }
hex = { workspace = true, default-features = false, features = ["alloc"] }
log = { workspace = true, features = ["kv"] }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
pallet-proofs = { workspace = true, default-features = false }
pallet-randomness = { workspace = true, default-features = false }
primitives-commitment = { workspace = true }
primitives-proofs = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-arithmetic = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }


# Frame deps
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

[dev-dependencies]
env_logger = { workspace = true }
multihash-codetable = { workspace = true, features = ["blake2b"] }
pallet-balances = { workspace = true, default-features = false }
pallet-market = { workspace = true, default-features = false }
rstest = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime", "sp-runtime/try-runtime"]
