[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "cli-primitives"
repository.workspace = true
version = "0.1.0"

[dependencies]
sc-cli = { workspace = true }
subxt = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
