[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "primitives-commitment"
repository.workspace = true
version = "0.1.0"

[dependencies]
cid.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng"] }

[lints]
workspace = true
