[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "primitives-commitment"
repository.workspace = true
version = "0.1.0"

[features]
serde = ["dep:serde"]
std = ["dep:filecoin-proofs"]

[dependencies]
primitives-proofs.workspace = true
sealed.workspace = true

cid.workspace = true
sha2.workspace = true

filecoin-proofs = { optional = true, workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng"] }

[lints]
workspace = true
