[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "primitives-commitment"
repository.workspace = true
version = "0.1.0"

[features]
serde = ["dep:serde"]
std = ["dep:filecoin-proofs"]

[dependencies]
cid.workspace = true
filecoin-proofs = { optional = true, workspace = true }
primitives-proofs.workspace = true
sealed.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng"] }

[lints]
workspace = true
