[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "primitives-proofs"
repository.workspace = true
version = "0.1.0"

[dependencies]
cid = { workspace = true, default-features = false, features = ["alloc"] }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-decode = { workspace = true, default-features = false, features = ["derive"] }
scale-encode = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

serde = { workspace = true, features = ["derive"], optional = true }

[lints]
workspace = true

[features]
default = ["std"]
std = ["cid/scale-codec", "codec/std", "scale-info/std", "sp-core/std", "sp-runtime/std"]
