[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "primitives-proofs"
repository.workspace = true
version = "0.1.0"

[dependencies]
bls12_381 = { workspace = true }
cid = { workspace = true, default-features = false, features = ["alloc"] }
codec = { workspace = true, default-features = false, features = ["derive"] }
frame-support = { workspace = true }
pairing = { workspace = true }
scale-decode = { workspace = true, default-features = false, features = ["derive"] }
scale-encode = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, features = ["derive"], optional = true }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
serde_json = { workspace = true, default-features = true }

[lints]
workspace = true

[features]
default = ["std"]
std = ["cid/scale-codec", "codec/std", "frame-support/std", "scale-info/std", "sp-core/std", "sp-std/std"]
