[package]
name = "file-storage"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
cid = { workspace = true }
thiserror = { workspace = true }
rocksdb = { workspace = true }

[lints]
workspace = true
