[package]
name = "file-storage"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
ciborium = { workspace = true }
cid = { workspace = true, features = ["serde"] }
rocksdb = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.10.1"

[lints]
workspace = true
