[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "mater-cli"
repository.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
mater.workspace = true

# Crates.io
clap = { workspace = true, features = ["derive"] }
filecoin-hashers = { version = "13.1.0", default-features = false }
fr32 = { version = "11.1.0", default-features = false }
ipld-core = { workspace = true }
storage-proofs-core = { version = "18.1.0", default-features = false }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true

[lints]
workspace = true
