[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "mater-cli"
repository.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
mater.workspace = true

# Crates.io
clap = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true

[lints]
workspace = true
