[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "mater"                # name WIP
repository.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO(@jmg-duarte,15/05/2024): reduce the required features
bitflags.workspace = true
byteorder = { workspace = true, features = ["i128"] }
integer-encoding = { workspace = true, features = ["tokio_async"] }
ipld-core = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
quick-protobuf.workspace = true
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["io"] }
bytes.workspace = true
sha2.workspace = true
digest.workspace = true
ipld-dagpb.workspace = true
itertools.workspace = true
async-stream.workspace = true
futures.workspace = true

[dev-dependencies]
rand.workspace = true


[lints]
workspace = true
