[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "mater"                # name WIP
repository.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO(@jmg-duarte,15/05/2024): reduce the required features
async-stream.workspace = true
bitflags.workspace = true
byteorder = { workspace = true, features = ["i128"] }
bytes.workspace = true
digest.workspace = true
futures.workspace = true
indexmap.workspace = true
integer-encoding = { workspace = true, features = ["tokio_async"] }
ipld-core = { workspace = true, features = ["serde"] }
ipld-dagpb.workspace = true
quick-protobuf.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["io"] }

[dev-dependencies]
rand.workspace = true


[lints]
workspace = true
