[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "polka-index"
repository.workspace = true
version = "0.1.0"

[dependencies]
ciborium = { workspace = true }
cid = { workspace = true, features = ["serde"] }
rocksdb = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive", "string"] }
jsonrpsee = { workspace = true, features = ["server"] }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-channel = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
integer-encoding = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
