[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "polka-index"
repository.workspace = true
version = "0.1.0"

[dependencies]
async-channel = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ciborium = { workspace = true }
cid = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "string"] }
integer-encoding = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
rocksdb = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
sha2 = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
