[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "storagext-cli"
repository.workspace = true
version = "0.1.0"


[dependencies]
storagext = { workspace = true, features = ["clap"] }

anyhow.workspace = true
cid = { workspace = true, features = ["scale-codec"], default-features = true }
clap = { workspace = true, features = ["derive", "env"] }
codec.workspace = true
frame-support = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["serde", "std"] }
primitives-proofs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
subxt = { workspace = true, features = ["jsonrpsee", "substrate-compat"] }
subxt-signer = { workspace = true, features = ["subxt"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

[lints]
workspace = true
